Streaming compress and archive 2.0